kotlin-parser/src/test/semlang/validatorTests/fail/comments3.sem
function myStuff.myFunction(): Integer {
  let myVar: Integer = Integer."2"
  myVar
}
// Test a block comment at the end with no termination
/*
